upd banners, remove old

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,7 @@
 import Layout from '@/layouts/Layout.astro';
 import { SITE_TITLE } from "@/const";
 ---
-<Layout title={`Ошибка 404 | ${SITE_TITLE}`} image="/img/banners/new_0.jpg">
+<Layout title={`Ошибка 404 | ${SITE_TITLE}`} image="/img/banners/2023_10_30-new_0.webp">
 	<h1 class="text-gray-500 text-4xl text-center sm:text-left"><strong class="text-7xl">404</strong> страница не найдена</h1>
 	<div class="flex justify-center sm:justify-start">
 		<a href="/" class="btn mb-10 max-[360px]:block max-[360px]:w-full">Вернуться на главную</a>
