--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 import { SITE_TITLE } from "@/const";
 ---
 
-<Layout title={`О компании | ${SITE_TITLE}`} image="/img/banners/new_0.jpg">
+<Layout title={`О компании | ${SITE_TITLE}`} image="/img/banners/2023_10_30-new_0.webp">
 	<h1>О компании</h1>
 	<p>
 		История группы компаний «Самарские автомобили» началась в 1993 году с
