--- a/src/pages/agreement/index.astro
+++ b/src/pages/agreement/index.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE, SITE_NAME } from "@/const";
 
 <Layout
 	title={`Соглашение об использовании | ${SITE_TITLE}`}
-	image="/img/banners/new_0.jpg"
+	image="/img/banners/2023_10_30-new_0.webp"
 >
 	<h1>Соглашение об использовании</h1>
 	<p>
