--- a/src/pages/carcare/index.astro
+++ b/src/pages/carcare/index.astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 import { SITE_TITLE } from "@/const";
 ---
 
-<Layout title={`Авто Уход | ${SITE_TITLE}`} image="/img/banners/new_0.jpg">
+<Layout title={`Авто Уход | ${SITE_TITLE}`} image="/img/banners/2023_10_30-new_0.webp">
 	<h1>Авто Уход</h1>
 
 	<img
