--- a/src/pages/cars/jaguar/index.astro
+++ b/src/pages/cars/jaguar/index.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE } from "@/const";
 
 <Layout
 	title={`Автомобили Jaguar в Самаре | ${SITE_TITLE}`}
-	image="/img/banners/new_0.jpg"
+	image="/img/banners/2023_10_30-new_0.webp"
 >
 	<h1>Официальный дилерский центр Jaguar</h1>
 
