--- a/src/pages/cars/moskvich/index.astro
+++ b/src/pages/cars/moskvich/index.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE } from "@/const";
 
 <Layout
 	title={`Автомобили Москвич в Самаре | ${SITE_TITLE}`}
-	image="/img/banners/moskvich-6.webp"
+	image="/img/banners/2023_10_30-moskvich-6.webp"
 >
 	<h1>Официальный дилерский центр Москвич</h1>
 
