--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '@/layouts/Layout.astro';
 ---
-<Layout title="Продажа авто в Самаре, автоцентры и автосалоны Самары по продаже новых автомобилей" image="/img/banners/new_0.jpg">
+<Layout title="Продажа авто в Самаре, автоцентры и автосалоны Самары по продаже новых автомобилей" image="/img/banners/2023_10_30-new_0.webp">
 	<h3>Продажа авто в Самаре</h3>
 	<p>Приобретение машины в автосалоне ответственный шаг, ведь, покупая новое авто в Самаре, мы не просто расстаемся с весьма значительной суммой денег. Мы приобретаем себе помощника и друга в повседневной жизни. Конечно, хочется купить именно ту машину, которую Вы задумали, и чтобы все прошло без проблем, быстро, удобно, на высоком уровне и без переплаты. Поэтому, несмотря на то, что продажа авто в Самаре осуществляется многими автосалонами, клиенты выбирают «Самарские автомобили». Обслуживание у нас всегда на высоте, цены по-настоящему выгодные, а персонал тактичный, вежливый и квалифицированный.</p>
 	<h3>Автосалоны Самары</h3>
