--- a/src/pages/cars/landrover/index.astro
+++ b/src/pages/cars/landrover/index.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE } from "@/const";
 
 <Layout
 	title={`Автомобили Land Rover в Самаре | ${SITE_TITLE}`}
-	image="/img/banners/new_0.jpg"
+	image="/img/banners/2023_10_30-new_0.webp"
 >
 	<h2>Официальный дилерский центр Land Rover</h2>
 
