--- a/src/pages/credit/index.astro
+++ b/src/pages/credit/index.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE } from "@/const";
 
 <Layout
 	title={`Кредит и лизинг в Самаре | ${SITE_TITLE}`}
-	image="/img/banners/new_0.jpg"
+	image="/img/banners/2023_10_30-new_0.webp"
 >
 	<h1>Кредит и лизинг в Самаре</h1>
 	<p>
