--- a/src/pages/spo_serv/index.astro
+++ b/src/pages/spo_serv/index.astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 import { SITE_TITLE } from "@/const";
 ---
 
-<Layout title={`Акции сервиса | ${SITE_TITLE}`} image="/img/banners/new_0.jpg">
+<Layout title={`Акции сервиса | ${SITE_TITLE}`} image="/img/banners/2023_10_30-new_0.webp">
 	<h1>Акции сервиса</h1>
 	<h3>Уважаемые клиенты!</h3>
 	<p>
