--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -15,7 +15,7 @@ import './header.scss';
 				<span
 					class="hidden md:block text-center text-xs text-gray-800 mt-2"
 				>
-					<b>Пробег&nbsp;центр</b>, <b>Москвич</b>, <b>Nissan</b>, <b>INFINITI</b>, <b>Jaguar</b
+					<b>OTING</b>, <b>Пробег&nbsp;центр</b>, <b>Москвич</b>, <b>Nissan</b>, <b>INFINITI</b>, <b>Jaguar</b
 					>, <b>Land Rover</b>
 				</span>
 			</a>
