--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -20,7 +20,7 @@ import { SITE_TITLE } from "@/const";
 		Все автосалоны предоставляют полный спектр услуг по продаже и
 		обслуживанию автомобилей в соответствии со стандартами своих
 		производителей. Посетителям всех центров доступен весь модельный ряд
-		автомобилей Москвич, Nissan, INFINITI, Jaguar Land Rover. При этом
+		автомобилей OTING, Москвич, Nissan, INFINITI, Jaguar Land Rover. При этом
 		автомобили можно оценить самостоятельно в рамках тест-драйва. Автоцентры
 		предоставляют возможность воспользоваться услугами, сопутствующими
 		приобретению автомобиля, в числе которых автострахование,
