--- a/src/pages/centers/south/index.astro
+++ b/src/pages/centers/south/index.astro
@@ -9,6 +9,31 @@ import { SITE_TITLE } from "@/const";
 >
 	<h1>Автоцентры на Южном шоссе</h1>
 
+	<h3>Автоцентр OTING</h3>
+	<div class="flex flex-wrap items-start mb-5">
+		<!-- <img src="{{ 'img/pages/centers/jaga.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
+		<p>
+			<b>Адрес:</b> 443085, Самара, Южное шоссе, 12, строение 2.<br />
+			<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a
+			><br />
+			<b>e-mail:&nbsp;</b><a href="sales@samauto.ru"
+				><font color="blue">sales@samauto.ru</font></a
+			><br />
+			<b>Сайт:</b> <a href="https://oting-samauto.ru/" target="_blank"
+				><font color="blue">oting-samauto.ru</font></a
+			><br />
+			<b>Часы работы:</b><br />
+			 Пн-Пт: 9:00 - 18:00, Сб-Вс: выходной<br />
+			<!-- <a
+										href="#"
+										target="_blank"
+										@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'jaguar'; $store.state.isModalOpen = true;"
+									>
+									<font color="blue">Записаться на тест-драйв »</font>
+									</a> -->
+		</p>
+	</div>
+
 	<h3>Автоцентр Jaguar</h3>
 	<div class="flex flex-wrap items-start mb-5">
 		<!-- <img src="{{ 'img/pages/centers/jaga.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
