--- a/src/pages/cars/oting/index.astro
+++ b/src/pages/cars/oting/index.astro
@@ -4,12 +4,12 @@ import { SITE_TITLE } from "@/const";
 ---
 
 <Layout
-	title={`Автомобили Москвич в Самаре | ${SITE_TITLE}`}
-	image="/img/banners/2023_10_30-moskvich-6.webp"
+	title={`Автомобили OTING в Самаре | ${SITE_TITLE}`}
+	image="/img/banners/2024_02_05-Oting.webp"
 >
 	<h1>Официальный дилерский центр OTING</h1>
 
-	<!-- <img src="{{ 'img/banners/nissanugfasad.jpg' | relative_url }}" alt="Автомобили Москвич в Самаре" class="mb-5 object-cover object-center"> -->
+	<!-- <img src="{{ 'img/banners/nissanugfasad.jpg' | relative_url }}" alt="Автомобили Oting в Самаре" class="mb-5 object-cover object-center"> -->
 	<p>
 		<b>Адрес:</b> 443085, Самара, Южное шоссе, 12, строение 2.<br />
 		<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a
