change mail on oting page

--- a/src/pages/cars/oting/index.astro
+++ b/src/pages/cars/oting/index.astro
@@ -14,8 +14,8 @@ import { SITE_TITLE } from "@/const";
 		<b>Адрес:</b> 443085, Самара, Южное шоссе, 12, строение 2.<br />
 		<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a
 		><br />
-		<b>e-mail:&nbsp;</b><a href="sales@samauto.ru"
-			><font color="blue">sales@samauto.ru</font></a
+		<b>e-mail:&nbsp;</b><a href="mailto:sales@oting-samauto.ru"
+			><font color="blue">sales@oting-samauto.ru</font></a
 		><br />
 		<b>Сайт:</b> <a href="https://oting-samauto.ru/" target="_blank"
 			><font color="blue">oting-samauto.ru</font></a
