fix email & work hours on centers/south page

--- a/src/pages/centers/south/index.astro
+++ b/src/pages/centers/south/index.astro
@@ -16,14 +16,13 @@ import { SITE_TITLE } from "@/const";
 			<b>Адрес:</b> 443085, Самара, Южное шоссе, 12, строение 2.<br />
 			<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a
 			><br />
-			<b>e-mail:&nbsp;</b><a href="sales@samauto.ru"
-				><font color="blue">sales@samauto.ru</font></a
+			<b>e-mail:&nbsp;</b><a href="mailto:sales@oting-samauto.ru"
+				><font color="blue">sales@oting-samauto.ru</font></a
 			><br />
 			<b>Сайт:</b> <a href="https://oting-samauto.ru/" target="_blank"
 				><font color="blue">oting-samauto.ru</font></a
 			><br />
-			<b>Часы работы:</b><br />
-			 Пн-Пт: 9:00 - 18:00, Сб-Вс: выходной<br />
+			<b>Часы работы:</b><br />Пн-Пт: 8:30 — 20:00 &nbsp;<br />Сб-Вс: 8:30 — 18:00 <br />
 			<!-- <a
 										href="#"
 										target="_blank"
