--- a/src/pages/centers/south/index.astro
+++ b/src/pages/centers/south/index.astro
@@ -13,7 +13,7 @@ import { SITE_TITLE } from "@/const";
 	<div class="flex flex-wrap items-start mb-5">
 		<!-- <img src="{{ 'img/pages/centers/jaga.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
 		<p>
-			<b>Адрес:</b> 443085, Самара, Южное шоссе, 12, строение 2.<br />
+			<b>Адрес:</b> 443085, Самара, Южное шоссе, 12, строение 2<br />
 			<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a
 			><br />
 			<b>e-mail:&nbsp;</b><a href="mailto:sales@oting-samauto.ru"
@@ -37,7 +37,7 @@ import { SITE_TITLE } from "@/const";
 	<div class="flex flex-wrap items-start mb-5">
 		<!-- <img src="{{ 'img/pages/centers/jaga.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
 		<p>
-			<b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12А, строение 1 <br />
+			<b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12, строение 2<br />
 			<b>Телефон:&nbsp;</b><a href="tel:+78462073377"
 				>+7 (846) 207-33-77</a
 			><br />
@@ -63,7 +63,7 @@ import { SITE_TITLE } from "@/const";
 	<div class="flex flex-wrap items-start mb-5">
 		<!-- <img src="{{ 'img/pages/centers/lr.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
 		<p>
-			<b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12А, строение 1 <br />
+			<b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12, строение 2<br />
 			<b>Телефон:&nbsp;</b><a href="tel:+78462073377"
 				>+7 (846) 207-33-77</a
 			><br />
@@ -118,7 +118,7 @@ import { SITE_TITLE } from "@/const";
 	<div class="flex flex-wrap items-start mb-5">
 		<!-- <img src="{{ 'img/pages/centers/ac_r1_infiniti.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
 		<p>
-			<b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12А, строение 1<br />
+			<b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12, строение 2<br />
 			<b>Телефон:&nbsp;</b><a href="tel:+78469936600"
 				>+7 (846) 993-66-00</a
 			><br />
@@ -147,7 +147,7 @@ import { SITE_TITLE } from "@/const";
 	<div class="flex flex-wrap items-start mb-5">
 		<!-- <img src="{{ 'img/pages/centers/nissanugfasad2.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
 		<p class="w-full lg:w-auto">
-			<b>Адрес:&nbsp;</b>443085, Самара, Южное шоссе, 12А, строение 1<br
+			<b>Адрес:&nbsp;</b>443085, Самара, Южное шоссе, 12, строение 2<br
 			/>
 			<b>Телефон:</b> <a href="tel:+78469936600">+7&nbsp;(846) 993-66-00</a
 			><br />
@@ -176,11 +176,6 @@ import { SITE_TITLE } from "@/const";
 
 	<h3>Схема проезда:</h3>
 	<div class="mb-5">
-		<script
-			type="text/javascript"
-			charset="utf-8"
-			async
-			src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abcc417e84cb6ccd3b8916ddef366adc653407c58afa4aaf101f736f18d02d542&width=100%25&height=400&lang=ru_RU&scroll=true"
-		></script>
+		<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A079f7f178db4c04669281605733a3c14a40db1d0dfe547d48f5619316ebb7a29&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 	</div>
 </Layout>
