--- a/src/pages/cars/landrover/index.astro
+++ b/src/pages/cars/landrover/index.astro
@@ -26,12 +26,7 @@ import { SITE_TITLE } from "@/const";
 
 	<h3>Схема проезда:</h3>
 	<div class="mb-5">
-		<script
-			type="text/javascript"
-			charset="utf-8"
-			async
-			src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abcc417e84cb6ccd3b8916ddef366adc653407c58afa4aaf101f736f18d02d542&width=100%25&height=400&lang=ru_RU&scroll=true"
-		></script>
+		<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A079f7f178db4c04669281605733a3c14a40db1d0dfe547d48f5619316ebb7a29&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 	</div>
 
 	<h3>Автомобили Land Rover в Самаре</h3>
