--- a/src/pages/cars/jaguar/index.astro
+++ b/src/pages/cars/jaguar/index.astro
@@ -9,7 +9,7 @@ import { SITE_TITLE } from "@/const";
 >
 	<h1>Официальный дилерский центр Jaguar</h1>
 	<p>
-		<b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12А, строение 1 <br />
+		<!-- <b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12А, строение 1 <br /> -->
 		<b>Телефон:&nbsp;</b><a href="tel:+78462073377">+7 (846) 207-33-77</a
 		><br />
 		<b>e-mail:</b> <a href="mailto:sales@jlrsamara.ru"
@@ -19,7 +19,7 @@ import { SITE_TITLE } from "@/const";
 			><font color="blue">www.jaguarsamara.ru</font></a
 		><br />
 		<b>Часы работы:</b><br />
-		 Пн-Пт с 8:30 до 20:00, Сб-Вс с 8:30 до 18:00, Вс - сервис - выходной
+		Пн-Пт: 9:00 - 18:00, Сб-Вс: выходной
 	</p>
 
 	<h3>Схема проезда:</h3>
