--- a/src/pages/cars/landrover/index.astro
+++ b/src/pages/cars/landrover/index.astro
@@ -9,7 +9,7 @@ import { SITE_TITLE } from "@/const";
 >
 	<h2>Официальный дилерский центр Land Rover</h2>
 	<p>
-		<b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12А, строение 1 <br />
+		<!-- <b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12А, строение 1 <br /> -->
 		<b>Телефон:</b>
 		<a href="tel:+78462073377">+7 (846) 207-33-77</a><br />
 		<b>e-mail:</b>
@@ -21,7 +21,7 @@ import { SITE_TITLE } from "@/const";
 			><font color="blue">www.landroversamara.ru</font></a
 		><br />
 		<b>Часы работы:</b><br />
-		 Пн-Пт с 8:30 до 20:00, Сб-Вс с 8:30 до 18:00, Вс - сервис - выходной
+		Пн-Пт: 9:00 - 18:00, Сб-Вс: выходной
 	</p>
 
 	<h3>Схема проезда:</h3>
