--- a/src/pages/cars/landrover/index.astro
+++ b/src/pages/cars/landrover/index.astro
@@ -9,7 +9,7 @@ import { SITE_TITLE } from "@/const";
 >
 	<h2>Официальный дилерский центр Land Rover</h2>
 	<p>
-		<!-- <b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12А, строение 1 <br /> -->
+		<b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12, строение 2<br />
 		<b>Телефон:</b>
 		<a href="tel:+78462073377">+7 (846) 207-33-77</a><br />
 		<b>e-mail:</b>
@@ -31,8 +31,7 @@ import { SITE_TITLE } from "@/const";
 
 	<h3>Автомобили Land Rover в Самаре</h3>
 	<p>
-		Компания Самарские автомобили — новый официальный дилер Land Rover,
-		расположенный по адресу: ул. Авроры 150 Е. Это один из самых молодых,
+		Компания Самарские автомобили — новый официальный дилер Land Rover. Это один из самых молодых,
 		современных и престижных дилерских центров марки в России,
 		соответствующий передовым стандартам обслуживания клиентов как
 		автосалона, так и сервисного центра.
