upd jaguar and landrover pages

--- a/src/pages/cars/landrover/index.astro
+++ b/src/pages/cars/landrover/index.astro
@@ -31,7 +31,7 @@ import { SITE_TITLE } from "@/const";
 
 	<h3>Автомобили Land Rover в Самаре</h3>
 	<p>
-		Компания Самарские автомобили — новый официальный дилер Land Rover. Это один из самых молодых,
+		Компания Самарские автомобили — официальный дилер Land Rover. Это один из самых молодых,
 		современных и престижных дилерских центров марки в России,
 		соответствующий передовым стандартам обслуживания клиентов как
 		автосалона, так и сервисного центра.
