--- a/src/pages/cars/jaguar/index.astro
+++ b/src/pages/cars/jaguar/index.astro
@@ -29,7 +29,7 @@ import { SITE_TITLE } from "@/const";
 
 	<h3>Автомобили Jaguar в Самаре</h3>
 	<p>
-		Компания Самарские автомобили — новый официальный дилер Jaguar. Это один из самых молодых,
+		Компания Самарские автомобили — официальный дилер Jaguar. Это один из самых молодых,
 		современных и престижных дилерских центров марки в России,
 		соответствующий передовым стандартам обслуживания клиентов как
 		автосалона, так и сервисного центра.
