--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -3,11 +3,12 @@ interface Props {
 	title: string;
 	description: string;
 	image?: string;
+	keywords?: string;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.url);
 
-const { title, description, image = '/img/404.jpg' } = Astro.props;
+const { title, description, image = '/img/404.jpg', keywords } = Astro.props;
 ---
 
 <!-- Global Metadata -->
@@ -22,6 +23,7 @@ const { title, description, image = '/img/404.jpg' } = Astro.props;
 <title>{title}</title>
 <meta property="title" content={title} />
 <meta name="description" content={description}>
+{keywords && <meta name="keywords" content={keywords} />}
 
 <!-- Open Graph -->
 <meta property="og:type" content="website" />
