--- a/src/components/Modals/Callback.astro
+++ b/src/components/Modals/Callback.astro
@@ -19,7 +19,7 @@ import {AGREE_LABEL} from '@/const'
 
 		<form>
 			<input type="text" tabindex="-1" placeholder="Ваше имя" name="name">
-			<input type="email" tabindex="-1" name="Email" placeholder="mail@example.com">
+			<input type="email" tabindex="-1" name="email" placeholder="mail@example.com">
 			<input type="tel" placeholder="8 999 999-99-99" name="phone" class="w-full px-2 py-3 border border-gray-400 focus:border-gray-600 focus:outline-none" required placeholder="Ваш телефон *">
 			<div class="error-message text-xs text-accent hidden phone"></div>
 			<input type="text" tabindex="-1" name="brand" x-ref="brand">
