--- a/src/components/Cars/Cars.astro
+++ b/src/components/Cars/Cars.astro
@@ -4,10 +4,10 @@ import { CARS_MENU } from '@/const';
 {
 	CARS_MENU && (
 	<section class="cars">
-		<div class="flex flex-wrap justify-center gap-x-4 sm:gap-0 sm:justify-around">
+		<div class="flex flex-wrap gap-4 justify-center xl:justify-around py-6 md:py-10">
 			{
 				CARS_MENU.map(link => (
-				<a href={link.url} class="w-[26%] sm:w-[12%] transition duration-500 hover:scale-110">
+				<a href={link.url} class="max-w-[100px] md:max-w-[160px] transition duration-500 hover:scale-110" {...link?.target ? {target: link.target} : {} }>
 					<img src={link.logo} alt={`Логотип ${link.title}`}>
 				</a>
 				))
