added test-drive link

--- a/src/pages/centers/south/index.astro
+++ b/src/pages/centers/south/index.astro
@@ -23,13 +23,13 @@ import { SITE_TITLE } from "@/const";
 				><font color="blue">oting-samauto.ru</font></a
 			><br />
 			<b>Часы работы:</b><br />Пн-Пт: 8:30 — 20:00 &nbsp;<br />Сб-Вс: 8:30 — 18:00 <br />
-			<!-- <a
-										href="#"
-										target="_blank"
-										@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'jaguar'; $store.state.isModalOpen = true;"
-									>
-									<font color="blue">Записаться на тест-драйв »</font>
-									</a> -->
+			<a
+				href="https://oting-samauto.ru/customers/test-drive/"
+				class=""
+				target="_blank"
+			>
+			Записаться на тест-драйв »
+		</a>
 		</p>
 	</div>
 
