--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -1,5 +1,5 @@
 .swiper-pagination-bullet {
-	@apply w-2.5 h-2.5 opacity-100 bg-white relative mx-1.5 transition-colors duration-300 before:content-[''] before:absolute before:w-5 before:h-5 before:-left-[5px] before:-top-[5px] before:border before:border-transparent before:rounded-full before:transition-colors before:duration-300 #{!important};
+	@apply w-1.5 sm:w-2.5 h-1.5 sm:h-2.5 opacity-100 bg-white relative mx-1.5 transition-colors duration-300 before:content-[''] before:absolute before:w-3 before:sm:w-5 before:h-3 before:sm:h-5 before:-left-[3px] sm:before:-left-[5px] before:-top-[3px] sm:before:-top-[5px] before:border before:border-transparent before:rounded-full before:transition-colors before:duration-300 #{!important};
 	&.swiper-pagination-bullet-active {
 		@apply bg-accent before:border-accent #{!important};
 	}
