change to infiniti-samauto.ru

--- a/src/pages/cars/infiniti/index.astro
+++ b/src/pages/cars/infiniti/index.astro
@@ -14,13 +14,11 @@ import { SITE_TITLE } from "@/const";
 		<b>Адрес:</b> 443085, Самара, Южное шоссе, 12, строение 2<br />
 		<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a
 		><br />
-		<b>e-mail:&nbsp;</b><a href="mailto:ds@infinitisamara.ru"
-			><font color="blue">ds@infinitisamara.ru</font></a
-		>, <a href="mailto:service@infinitysamara.ru"
-			><font color="blue">service@infinitisamara.ru</font></a
+		<b>e-mail:&nbsp;</b><a href="mailto:2047marketing@sam-auto.ru"
+			><font color="blue">2047marketing@sam-auto.ru</font></a
 		><br />
-		<b>Сайт:</b> <a href="http://www.infinitisamara.ru" target="_blank"
-			><font color="blue">www.infinitisamara.ru</font></a
+		<b>Сайт:</b> <a href="https://infiniti-samauto.ru" target="_blank"
+			><font color="blue">infiniti-samauto.ru</font></a
 		><b> </b><br />
 		<b>Часы работы:</b><br />
 		 Пн-Пт: 8:30 — 20:00<br />
