--- a/src/pages/credit/index.astro
+++ b/src/pages/credit/index.astro
@@ -23,7 +23,7 @@ import { SITE_TITLE } from "@/const";
 	<ul>
 		<li>
 			Программа <a
-				href="https://www.infinitisamara.ru/purchase/finance-specials/"
+				href="https://infiniti-samauto.ru/purchase/finance-specials/"
 				>INFINITI Finance</a
 			>, позволяющая купить авто престижной японской марки в кредит на
 			максимально выгодных условиях. Действуют специальные условия для
