--- a/src/pages/spo_serv/index.astro
+++ b/src/pages/spo_serv/index.astro
@@ -51,7 +51,7 @@ import { SITE_TITLE } from "@/const";
 			<b class="">Для владельцев Nissan</b>
 		</a>
 		<a
-			href="https://infinitisamara.ru/owners/service-specials/"
+			href="https://infiniti-samauto.ru/owners/service-specials/"
 			class="text-gray-800 flex flex-col items-center text-center underline hover:no-underline"
 			target="_blank"
 		>
