upd specials link

--- a/src/pages/spo_serv/index.astro
+++ b/src/pages/spo_serv/index.astro
@@ -39,7 +39,7 @@ import { SITE_TITLE } from "@/const";
 			<b class="">Для владельцев Jaguar</b>
 		</a>
 		<a
-			href="https://nissansamara.ru/owners/carcare-specials/"
+			href="https://nissansamara.ru/specials/service-maintenance/"
 			class="text-gray-800 flex flex-col items-center text-center underline hover:no-underline"
 			target="_blank"
 		>
@@ -51,7 +51,7 @@ import { SITE_TITLE } from "@/const";
 			<b class="">Для владельцев Nissan</b>
 		</a>
 		<a
-			href="https://infiniti-samauto.ru/owners/service-specials/"
+			href="https://infiniti-samauto.ru/special-offers/"
 			class="text-gray-800 flex flex-col items-center text-center underline hover:no-underline"
 			target="_blank"
 		>
@@ -63,7 +63,7 @@ import { SITE_TITLE } from "@/const";
 			<b class="">Для владельцев INFINITI</b>
 		</a>
 		<a
-			href="https://moskvich-samauto.ru/owners/accessories/"
+			href="https://moskvich-samauto.ru/customers/promotions/"
 			class="text-gray-800 flex flex-col items-center text-center underline hover:no-underline"
 			target="_blank"
 		>
